--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluentui_icons: ^1.0.0
-  # gap: ^2.0.0
+  gap: ^2.0.0
+  get:
 
 dev_dependencies:
   flutter_test:
